Bug 76197 - Other: OfficeMenuBar no longer takes private menu's in StartModule
Summary: Other: OfficeMenuBar no longer takes private menu's in StartModule
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: Other All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: BSA target:5.1.0 target:4.4.6 target:...
Keywords: regression
: 76199 (view as bug list)
Depends on:
Blocks: 94331
  Show dependency treegraph
 
Reported: 2014-03-15 11:11 UTC by Fernand
Modified: 2016-10-25 19:23 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fernand 2014-03-15 11:11:19 UTC
With  4.2 (Windows)

Private Extensions menu's are no longer visible in the StartModule
Private Toolbars are still visible in the StartModule

<node oor:name="OfficeMenuBar">
            <node oor:name="MyPrivateMenu.OfficeMenuBar" oor:op="replace">
                <prop oor:name="Context" oor:type="xs:string"> <value>com.sun.star.frame.StartModule,com.sun.star.text.TextDocument,com.sun.star.sdb.TextReportDesign,com.sun.star.text.WebDocument,com.sun.star.xforms.XMLFormDocument,com.sun.star.text.GlobalDocument,com.sun.star.sdb.FormDesign,com.sun.star.sheet.SpreadsheetDocument,com.sun.star.drawing.DrawingDocument,com.sun.star.presentation.PresentationDocument,com.sun.star.sdb.OfficeDatabaseDocument</value>
                </prop>

this menu shows in the different modules but "com.sun.star.frame.StartModule" is sillently ignored





<node oor:name="MyPrivate Toolbar.OfficeToolBar" oor:op="replace">
                <node oor:name="m001" oor:op="replace">
                    <prop oor:name="Context" oor:type="xs:string"> <value>com.sun.star.frame.StartModule,com.sun.star.text.TextDocument,com.sun.star.sdb.TextReportDesign,com.sun.star.text.WebDocument,com.sun.star.xforms.XMLFormDocument,com.sun.star.text.GlobalDocument,com.sun.star.sdb.FormDesign,com.sun.star.sheet.SpreadsheetDocument,com.sun.star.drawing.DrawingDocument,com.sun.star.presentation.PresentationDocument,com.sun.star.sdb.OfficeDatabaseDocument</value>
                    </prop>

here the Menubar is showed in the startModule
              
Operating System: All
Version: 4.2.0.4 release
Comment 1 Cor Nouws 2014-04-08 20:09:19 UTC
Hi Fernand,

Haven't checked yet (will do when I update an extension.. later)
But isn this change done on purpose with the new start center ??

Cheers
Cor
Comment 2 Adolfo Jayme Barrientos 2014-11-11 11:01:31 UTC
*** Bug 76199 has been marked as a duplicate of this bug. ***
Comment 3 Alex Thurgood 2015-01-03 17:38:07 UTC
Adding self to CC if not already on
Comment 4 Cor Nouws 2015-02-19 15:57:27 UTC
I confirm the behavior (checked in 440)

Cannot think of any good reason for the change > a bug IMO.
Comment 5 Maxim Monastirsky 2015-09-18 14:29:44 UTC
Most likely a regression of:

commit 46666a7720e18238b926531a7082dbb8bc524889
Author: Jan Holesovsky <kendy@collabora.com>
Date:   Wed Nov 13 14:44:45 2013 +0100

    startcenter: Remove useless menu entries.
    
    Change-Id: Ie886beceb57201ee1a0893943c455d5f87b0d6cc

The code at MenuBarManager::FillMenuManager checks for ".uno:WindowList" item, and inserts the addon menu before it, but StartModule doesn't have this item.
Comment 6 Yousuf Philips (jay) (retired) 2015-09-18 21:59:06 UTC
(In reply to Maxim Monastirsky from comment #5)
> The code at MenuBarManager::FillMenuManager checks for ".uno:WindowList"
> item, and inserts the addon menu before it, but StartModule doesn't have
> this item.

Maybe we can add code that if it doesnt find ".uno:WindowList", that it checks for ".uno:ToolsMenu" and places the addon menu after it.
Comment 7 Commit Notification 2015-09-20 05:51:29 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b1326ecbb793a5940719b59a049368e7be45147a

tdf#76197 Make OfficeMenuBar work again in the start center

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-09-20 21:47:18 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9f6f86805e543be6e76ff22496663ddc68669ce5&h=libreoffice-4-4

tdf#76197 Make OfficeMenuBar work again in the start center

It will be available in 4.4.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2015-09-20 21:47:25 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f30206f63dcf6fe41a216a3d708dfd05cc2b83a9&h=libreoffice-5-0

tdf#76197 Make OfficeMenuBar work again in the start center

It will be available in 5.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.