tdf#76197 Make OfficeMenuBar work again in the start center

Regression of 46666a7720e18238b926531a7082dbb8bc524889.
The code in MenuBarManager::FillMenuManager merges the
addon menu before .uno:WindowList, which doesn't exist
in the start center since that commit.

As a last resort, let's also check for .uno:HelpMenu
(assuming that it's never placed before the Window menu).

Change-Id: If45eebe4351c40d8ed69daba527844ffc02e8458